--- a/Prediction using Supervised ML/Student_Percentage_Prediction.ipynb
+++ b/Prediction using Supervised ML/Student_Percentage_Prediction.ipynb
@@ -1057,7 +1057,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### From the above result we can say that if a studied for 9.25 then student will secured 93.69 MARKS."
+    "### From the above result we can say that if a studied for 9.25 then the student will secured 93.69 MARKS."
    ]
   },
   {
